# STR

./: .gitignore  CMakeLists.txt  DOCUMENTACION.md  RESUMEN_INTEGRAL.md  sdkconfig  sdkconfig.defaults
AirTelemetry/: README.md  attitude.py  uart_attitude.py
main/: CMakeLists.txt  config.h  main.c  mpu6050.c  mpu6050.h  servos.c  servos.h  tasks.c  tasks.h
